# my-ai-agent

./: README.md
agent-server/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agent-server/app/: main.py
agent-server/app/api/v1/: router.py
agent-server/app/api/v1/endpoints/: chat.py  email.py  files.py  search.py  sessions.py  settings_api.py  tasks.py
agent-server/app/core/: config.py  exceptions.py  logger.py
agent-server/app/db/: database.py  schema.sql
agent-server/app/mcp/: email_sender.py  filesystem.py  search.py
agent-server/app/models/: message.py  session.py  settings.py
agent-server/app/schemas/: chat.py  email.py  files.py  search.py
agent-server/app/services/: token_counter.py  vault.py
agent-server/scripts/: setup.sh  start.sh
agent-server/tests/integration/: test_health.py
agent-server/tests/unit/: test_token_counter.py
agent-web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
agent-web/src/: App.css  App.jsx  index.css
agent-web/src/api/: chat.js  client.js  email.js  files.js  sessions.js  settings.js  tasks.js
agent-web/src/components/chat/: ChatWindow.jsx  MessageBubble.jsx  MessageInput.jsx
agent-web/src/components/common/: Modal.jsx  SmtpStatusBanner.jsx  TokenBadge.jsx  ToolBadge.jsx
agent-web/src/components/files/: FileExplorer.jsx
agent-web/src/hooks/: useSSE.js
agent-web/src/store/: chatStore.js  sessionStore.js  settingsStore.js  taskStore.js  uiStore.js
agent-web/src/utils/: formatters.js
(+5 files in other folders)
